@@ -1,3 +1,8 @@
+2011-04-20 minad <mail@daniel-mendler.de>
+        * Use getopt
+        * Nicer syntax for tcp and unix transports
+        * Drop compatibility with old kernels
+
 2008-07-22 sqweek <sqweek@gmail.com>
 	* 1.3 release
 	* 9mount: support for custom uname, cache, msize, virtio, fd transport,
